前週・翌週のリンクを追加

--- a/2026-02-05/season3_weekly_report_2026-02-05_styled.html
+++ b/2026-02-05/season3_weekly_report_2026-02-05_styled.html
@@ -13,6 +13,7 @@
       <p>更新日: 2026-02-05</p>
       <p>集計期間: 2026-01-30 〜 2026-02-05</p>
       <p>比較期間: 2026-01-23 〜 2026-01-29</p>
+      <div class="report-nav"><a href="../2026-02-12/season3_weekly_report_2026-02-12_styled.html">翌週レポート →</a></div>
     </div>
 
     <div class="kpi-grid">
