--- a/2026-02-26/season3_weekly_report_2026-02-26_styled.html
+++ b/2026-02-26/season3_weekly_report_2026-02-26_styled.html
@@ -13,6 +13,10 @@
       <p>更新日: 2026-02-26</p>
       <p>集計期間: 2026-02-20 〜 2026-02-26</p>
       <p>比較期間: 2026-02-13 〜 2026-02-19</p>
+      <div class="report-nav">
+        <a href="../2026-02-19/season3_weekly_report_2026-02-19_styled.html">← 前週レポート</a>
+        <a href="../2026-03-05/season3_weekly_report_2026-03-05_styled.html">翌週レポート →</a>
+      </div>
     </div>
 
     <div class="kpi-grid">
