--- a/2026-02-12/season3_weekly_report_2026-02-12_styled.html
+++ b/2026-02-12/season3_weekly_report_2026-02-12_styled.html
@@ -13,10 +13,7 @@
       <p>更新日: 2026-02-12</p>
       <p>集計期間: 2026-02-06 〜 2026-02-12</p>
       <p>比較期間: 2026-01-30 〜 2026-02-05</p>
-      <div class="report-nav">
-        <a href="../2026-02-05/season3_weekly_report_2026-02-05_styled.html">← 前週レポート</a>
-        <a href="../2026-02-19/season3_weekly_report_2026-02-19_styled.html">翌週レポート →</a>
-      </div>
+      <div class="report-nav"><a href="../2026-02-05/season3_weekly_report_2026-02-05_styled.html">← 前週レポート</a><a href="../2026-02-19/season3_weekly_report_2026-02-19_styled.html">翌週レポート →</a></div>
     </div>
 
     <div class="kpi-grid">
@@ -57,7 +54,7 @@
     </div></section>
 
     <section id="s4"><h2>4. メタカード採用率</h2><div class="content">
-      <div class='muted'>meta-forecastデータなし</div>
+      <div class='scroll-hint'>↔ 横スクロール</div><div class='table-wrap'><table><thead><tr><th>順位</th><th>メタカード</th><th>最新採用率</th><th>前週採用率</th><th>差分</th><th>主な採用デッキタイプ</th></tr></thead><tbody><tr><td>1</td><td>スボミー(むずむずかふん)</td><td>44.9%</td><td>31.2%</td><td>+13.7pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【マリィのオーロンゲex】 / 【メガスターミーex】</div></td></tr><tr><td>2</td><td>マシマシラ(アドレナブレイン)</td><td>42.1%</td><td>25.0%</td><td>+17.1pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【マリィのオーロンゲex】 / 【Nのゾロアークex】</div></td></tr><tr><td>3</td><td>リーリエのピッピex(フェアリーゾーン)</td><td>32.6%</td><td>17.5%</td><td>+15.1pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【メガディアンシーex】 / 【ロケット団のミュウツーex】</div></td></tr><tr><td>4</td><td>ジャミングタワー</td><td>25.4%</td><td>15.0%</td><td>+10.4pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【メガルカリオex】 / 【ゲッコウガex】</div></td></tr><tr><td>5</td><td>シェイミ(はなのカーテン)</td><td>23.9%</td><td>27.5%</td><td>-3.6pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【フーディン】 / 【マリィのオーロンゲex】</div></td></tr><tr><td>6</td><td>ツールスクラッパー</td><td>23.1%</td><td>33.8%</td><td>-10.7pt</td><td><div class='cell-scroll-x'>【マリィのオーロンゲex】 / 【メガルカリオex】 / 【おまつりおんど】</div></td></tr><tr><td>7</td><td>コダック(しめりけ)</td><td>22.9%</td><td>7.5%</td><td>+15.4pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【フーディン】 / 【マリィのオーロンゲex】</div></td></tr><tr><td>8</td><td>バトルコロシアム</td><td>12.9%</td><td>11.2%</td><td>+1.7pt</td><td><div class='cell-scroll-x'>【フーディン】 / 【シロナのガブリアスex】 / 【メガルカリオex】</div></td></tr><tr><td>9</td><td>ロケット団の監視塔</td><td>7.8%</td><td>13.8%</td><td>-6.0pt</td><td><div class='cell-scroll-x'>【ドラパルトex】 / 【メガルカリオex】 / 【シロナのガブリアスex】</div></td></tr><tr><td>10</td><td>モモワロウex(しはいのくさり)</td><td>5.4%</td><td>5.0%</td><td>+0.4pt</td><td><div class='cell-scroll-x'>【Nのゾロアークex】 / 【ドラパルトex】 / 【マリィのオーロンゲex】</div></td></tr></tbody></table></div>
     </div></section>
 
     <section id="s5"><h2>5. 安定スコアランキング</h2><div class="content">
